<resources>
    <string name="app_name">Ardi3</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send1</string>
    <string name="title_activity_display_message">The Message</string>
    <string name="title_bluetooth_connect">Bluetooth connect</string>
    <string name="button_bluetooth_connect">Connect</string>
    <string name="title_bluetooth_devices">Bluetooth devices</string>
    <string name="button_bluetooth_discover">Search</string>
    <string name="button_bluetooth_get_distance">get distance</string>
    <string name="title_activity_bluetooth_connection">BluetoothConnectionActivity</string>
    <string name="no_bluetooth_devices">No Bluetooth devices found</string>
    <string name="error_connect_failed">Connection failed</string>
    <string name="error_connect_lost">Connection lost</string>
    <string name="title_paired_bluetooth_devices">Paired devices</string>
    <string name="title_found_bluetooth_devices">Found devices</string>
    <string name="title_bluetooth">Bluetooth</string>
    <string name="title_bluetooth_disabled">disabled</string>
    <string name="title_bluetooth_status_unknown">Unknown</string>
    <string name="title_bluetooth_status">Bluetooth status</string>
    <string name="title_bluetooth_state_off">Off</string>
    <string name="title_bluetooth_state_on">On</string>
    <string name="title_bluetooth_state_turning_off">Turning off</string>
    <string name="title_bluetooth_state_turning_on">Turning on</string>
    <string name="title_bluetooth_state_unknown">Unknown</string>
    <string name="title_bluetooth_discovery">Discovery</string>
    <string name="title_bluetooth_discovery_disabled">Inactive</string>
    <string name="title_bluetooth_discovery_in_progress">In progress</string>
    <string name="bluetooth_dialog_message">Unable to initialize Bluetooth adapter. Application unable to work properly</string>
    <string name="bluetooth_dialog_title">Bluetooth error</string>
    <string name="button_ok">Ok</string>
</resources>
